--- a/file/static/index.html
+++ b/file/static/index.html
@@ -531,9 +531,10 @@
                         about: `
                         初めまして、ポートフォリオを見ていただきありがとうございます！
                         プログラミングでのものづくりに興味があり、ハッカソンやPBL（課題解決型学習）にも
-                        参加させていただいてます！好きな理由と致しましては新しい技術を触ったり
+                        参加させていただいてます！プログラミングが好きな理由と致しましては新しい技術を触ったり
                         実際に動く成果物を作るのが好きだからです！
-                        人柄としては「優しい」「聞き上手」などが多く、チームでのコミュニケーションも大切にしています。
+                        人柄としては「優しい」「聞き上手」などが多く、チームでのコミュニケーションも大切にしており、
+                        技術面では「やることが早い」「冷静だけど熱血」などの評価を頂いてます。
                         `,
                         skills: [
                             {
