--- a/file/static/index.html
+++ b/file/static/index.html
@@ -513,7 +513,7 @@
 
         <footer>
             <div class="container">
-                <p>&copy; 2025 {{ portfolio.name }}. All rights reserved. made with AI</p>
+                <p>&copy; 2025 {{ portfolio.name }}. All rights reserved.</p>
             </div>
         </footer>
     </div>
@@ -531,10 +531,11 @@
                         about: `
                         初めまして、ポートフォリオを見ていただきありがとうございます！
                         プログラミングでのものづくりに興味があり、ハッカソンやPBL（課題解決型学習）にも
-                        参加させていただいてます！プログラミングが好きな理由と致しましては新しい技術を触ったり
+                        参加しています！プログラミングが好きな理由は、新しい技術を触ったり
                         実際に動く成果物を作るのが好きだからです！
                         人柄としては「優しい」「聞き上手」などが多く、チームでのコミュニケーションも大切にしており、
-                        技術面では「やることが早い」「冷静だけど熱血」などの評価を頂いてます。
+                        技術面では「行動が早い」「冷静だけど熱血」などの評価を頂いてます。
+                        まだまだ未熟ではありますがどうぞよろしくお願いします！
                         `,
                         skills: [
                             {
@@ -565,7 +566,7 @@
                             {
                                 name: "Vue.js",
                                 icon: "🖼️",
-                                description: "デザインの重要性を学び、苦戦しながら勉強中"
+                                description: "デザインの重要性を学び、手を動かしながら勉強中"
                             },
                             {
                                 name: "仮想化技術",
@@ -633,7 +634,7 @@
                             {
                                 id: 3,
                                 title: "晒し屋時計",
-                                description: "ハッカソンにて作成、画面描画や設定画面などのメイン部分を担当",
+                                description: "ハッカソンにて作成、画面描画、アラーム、設定画面、音声読み上げなどを担当",
                                 code: "None",
                                 technologies: ["Flask","Tailscale funnel","Raspberry Pi"],
                                 icon: "⏰"
