--- a/file/static/index.html
+++ b/file/static/index.html
@@ -635,7 +635,7 @@
                                 id: 3,
                                 title: "晒し屋時計",
                                 description: "ハッカソンにて作成、画面描画、アラーム、設定画面、音声読み上げなどを担当",
-                                code: "None",
+                                code: "https://github.com/swkoubou/sarasiya",
                                 technologies: ["Flask","Tailscale funnel","Raspberry Pi"],
                                 icon: "⏰"
                             },
