--- a/file/static/index.html
+++ b/file/static/index.html
@@ -505,6 +505,9 @@
                         <a href="mailto:s2321191@cco.kanagawa-it.ac.jp" class="cta-button">s2321191@cco.kanagawa-it.ac.jp</a>
 
                     </div>
+                    <div class="contact-content">
+                        <a href="/qr" target="_blank" class="cta-button">This Portfolio</a>
+                    </div>
                 </div>
 
                 
