--- a/file/static/index.html
+++ b/file/static/index.html
@@ -506,7 +506,7 @@
 
                     </div>
                     <div class="contact-content">
-                        <a href="/qr" target="_blank" class="cta-button">This Portfolio</a>
+                        <a href="https://portfolio.yoimiya.net/qr" target="_blank" class="cta-button">This Portfolio</a>
                     </div>
                 </div>
 
