--- a/file/static/index.html
+++ b/file/static/index.html
@@ -622,14 +622,14 @@
                                 id: 1,
                                 title: "CI/CDポートフォリオサイト",
                                 code: "https://github.com/v2-2v/cicd-portfolio",
-                                description: "CI/CDと仮想サーバを実用するために作ったポートフォリオ",
+                                description: "CI/CDと仮想サーバを実用するために作ったこのポートフォリオ",
                                 technologies: ["Gin", "GitHub Actions", "Vue.js" , "NGINX", "Tailscale", "Cloudflare","Proxmox"],
                                 icon: "🌐"
                             },
                             {
                                 id: 2,
                                 title: "課題管理アプリ",
-                                description: "DiscordとWEBで管理できる協力型課題管理ツール",
+                                description: "DiscordとWEBで管理できる協力型課題管理ツール。継続的にアップデートを行いブラッシュアップ",
                                 code: "https://github.com/v2-2v/mamoru",
                                 technologies: ["Discord.py", "Flask","Tailscale funnel"],
                                 icon: "📚"
@@ -637,7 +637,7 @@
                             {
                                 id: 3,
                                 title: "晒し屋時計",
-                                description: "ハッカソンにて作成、画面描画、アラーム、設定画面、音声読み上げなどを担当",
+                                description: "ハッカソンにて作成、画面描画、アラーム、設定画面、音声認識、読み上げなどを担当",
                                 code: "https://github.com/swkoubou/sarasiya",
                                 technologies: ["Flask","Tailscale funnel","Raspberry Pi"],
                                 icon: "⏰"
@@ -645,7 +645,7 @@
                             {
                                 id: 4,
                                 title: "ホールアナライザー",
-                                description: "友人のためのスロット情報収集ツール",
+                                description: "友人のためのスロット台情報収集、分析ツール、現在も運用中",
                                 code: "https://github.com/v2-2v/hall_analyzer",
                                 technologies: ["Flask", "Beautiful Soup 4", "NGINX", "Cloudflare","Proxmox"],
                                 icon: "📈"
@@ -653,7 +653,7 @@
                             {
                                 id: 5,
                                 title: "コンテナ管理ツール",
-                                description: "友人に自宅サーバーをVPSとして貸すためのコントロールパネル",
+                                description: "友人に自宅サーバーをVPSとして貸すためのコントロールパネル、現在も運用中",
                                 code: "https://github.com/v2-2v/PXM",
                                 technologies: ["Flask","NGINX", "Cloudflare","Proxmox"],
                                 icon: "☁️"
@@ -661,7 +661,7 @@
                             {
                                 id: 6,
                                 title: "読み上げBOT",
-                                description: "DiscordのチャットをVCで読み上げるBOT",
+                                description: "DiscordのチャットをVCで読み上げるBOT、現在も運用中",
                                 code: "https://github.com/v2-2v/yomiage_bot",
                                 technologies: ["Discord.py"],
                                 icon: "🗣"
