--- a/file/static/index.html
+++ b/file/static/index.html
@@ -431,6 +431,7 @@
                     <h1>{{ portfolio.name }}のポートフォリオ</h1>
                     <p>{{ portfolio.title }}</p>
                     <p>PCでの閲覧を推奨します</p>
+                     <p>portfolio.yoimiya.net</p>
                     <a href="#about" @click="scrollTo('about')" class="cta-button">プロフィール</a>
                 </div>
             </section>
@@ -622,7 +623,7 @@
                                 id: 1,
                                 title: "CI/CDポートフォリオサイト",
                                 code: "https://github.com/v2-2v/cicd-portfolio",
-                                description: "CI/CDと仮想サーバを実用するために作ったこのポートフォリオ",
+                                description: "CI/CDと仮想サーバを実用するために作成",
                                 technologies: ["Gin", "GitHub Actions", "Vue.js" , "NGINX", "Tailscale", "Cloudflare","Proxmox"],
                                 icon: "🌐"
                             },
