edit of ドックンバトル

--- a/file/static/index.html
+++ b/file/static/index.html
@@ -677,6 +677,14 @@
                             },
                             {
                                 id: 7,
+                                title: "ドックンバトル",
+                                description: "ハッカソンにて開発。センサ部分と一部フロントを担当",
+                                code: "https://github.com/swkoubou/HackU_swk",
+                                technologies: ["ESP32","JavaScript","Firebase"],
+                                icon: "📝"
+                            },
+                            {
+                                id: 8,
                                 title: "フルスタックメモ",
                                 description: "フルスタックで動作するメモアプリ(開発中)",
                                 code: "None",
@@ -684,7 +692,7 @@
                                 icon: "📝"
                             },
                             {
-                                id: 8,
+                                id: 9,
                                 title: "Dasein(ダーザイン)",
                                 description: "他大学と多人数で共同で作成するお散歩推進アプリ(開発中)",
                                 code: "None",
