change　ドックンバトルicon

--- a/file/static/index.html
+++ b/file/static/index.html
@@ -681,7 +681,7 @@
                                 description: "ハッカソンにて開発。センサ部分と一部フロントを担当",
                                 code: "https://github.com/swkoubou/HackU_swk",
                                 technologies: ["ESP32","JavaScript","Firebase"],
-                                icon: "📝"
+                                icon: "👾"
                             },
                             {
                                 id: 8,
