--- a/file/static/index.html
+++ b/file/static/index.html
@@ -509,6 +509,9 @@
                         <a href="https://qiita.com/v2-2v" target="_blank" class="cta-button">Qiita</a>
                     </div>
                     <div class="contact-content">
+                        <a href="mailto:contact@yoimiya.net" class="cta-button">contact@yoimiya.net</a>
+                    </div>
+                    <div class="contact-content">
                         <a href="mailto:s2321191@cco.kanagawa-it.ac.jp" class="cta-button">s2321191@cco.kanagawa-it.ac.jp</a>
 
                     </div>
@@ -640,7 +643,7 @@
                                 title: "課題管理アプリ",
                                 description: "DiscordとWEBで管理できる協力型課題管理ツール。継続的にアップデートを行いブラッシュアップ",
                                 code: "https://github.com/v2-2v/mamoru",
-                                technologies: ["Discord.py", "Flask","Tailscale funnel"],
+                                technologies: ["Discord.py", "Flask","Tailscale funnel","swift","kotlin"],
                                 icon: "📚"
                             },
                             {
